[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/items/CandleScene.gd" type="Script" id=1]
[ext_resource path="res://assets/visual/game_assets/candle/spr_item_candle_1.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 2.0

[node name="CandleNode" type="Node2D"]
script = ExtResource( 1 )

[node name="CandleSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="WrapSprite" type="Sprite" parent="."]

[node name="CandleArea2D" type="Area2D" parent="."]

[node name="CandleCollisionShape2D" type="CollisionShape2D" parent="CandleArea2D"]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="CandleArea2D" to="." method="_on_CandleArea2D_mouse_entered"]
[connection signal="mouse_exited" from="CandleArea2D" to="." method="_on_CandleArea2D_mouse_exited"]
